[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Menu/menu_bg.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Menu/barHorizontal_yellow_mid.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Menu/barHorizontal_blue_mid.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Menu/barHorizontal_green_mid.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/pageTitle.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/Menu/MainMenu.gd" type="Script" id=6]
[ext_resource path="res://Assets/Fonts/pageName.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/Fonts/pageBtn.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/Images/Menu/WA.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/Menu/barHorizontal_red_mid.png" type="Texture" id=10]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 1930.28 ]
}

[node name="WorldBackground" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stars" type="CPUParticles2D" parent="."]
position = Vector2( 207, -20 )
amount = 200
lifetime = 4.0
randomness = 0.7
emission_shape = 2
emission_rect_extents = Vector2( 200, 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 600 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_top = 5.0
margin_right = -35.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuName" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 330.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 7 )
text = "Main Menu"

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 22.0
margin_right = 330.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 30 )

[node name="title" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 56.0
margin_right = 330.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Space"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 114.0
margin_right = 330.0
margin_bottom = 180.0
rect_min_size = Vector2( 55, 66 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 184.0
margin_right = 330.0
margin_bottom = 239.0
rect_min_size = Vector2( 0, 55 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="label" type="Label" parent="NinePatchRect/VBoxContainer/playBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 243.0
margin_right = 330.0
margin_bottom = 273.0
rect_min_size = Vector2( 55, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settingsBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 277.0
margin_right = 330.0
margin_bottom = 332.0
rect_min_size = Vector2( 0, 55 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="label" type="Label" parent="NinePatchRect/VBoxContainer/settingsBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 336.0
margin_right = 330.0
margin_bottom = 366.0
rect_min_size = Vector2( 55, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShareBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 370.0
margin_right = 330.0
margin_bottom = 425.0
rect_min_size = Vector2( 0, 55 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="label" type="Label" parent="NinePatchRect/VBoxContainer/ShareBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Share / Update"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WALogo" type="TextureRect" parent="NinePatchRect/VBoxContainer/ShareBtn"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 15.0
margin_top = -15.0
margin_right = 45.0
margin_bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer5" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 429.0
margin_right = 330.0
margin_bottom = 459.0
rect_min_size = Vector2( 55, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quitBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 463.0
margin_right = 330.0
margin_bottom = 518.0
rect_min_size = Vector2( 0, 55 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="label" type="Label" parent="NinePatchRect/VBoxContainer/quitBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer6" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 522.0
margin_right = 330.0
margin_bottom = 552.0
rect_min_size = Vector2( 55, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 556.0
margin_right = 330.0
margin_bottom = 574.0
custom_fonts/font = ExtResource( 7 )
text = "alpha 0.4"
align = 2

[node name="MarginContainer7" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 578.0
margin_right = 330.0
margin_bottom = 608.0
rect_min_size = Vector2( 55, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 612.0
margin_right = 330.0
margin_bottom = 643.0
custom_colors/font_color = Color( 1, 1, 1, 0.247059 )
text = "ART: www.kenney.nl
Sound: www.opengameart.org"

[node name="Label" type="Label" parent="."]
margin_left = 42.0
margin_top = 179.0
margin_right = 373.0
margin_bottom = 247.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TODO:  Level Display (5L), Save Score Local
Bullet Damage indecator, Drops Flash, "
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="NinePatchRect/VBoxContainer/playBtn" to="." method="_on_playBtn_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/settingsBtn" to="." method="_on_settingsBtn_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/ShareBtn" to="." method="_on_ShareBtn_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/quitBtn" to="." method="_on_quitBtn_pressed"]
